--- a/node-rest-shop/package.json
+++ b/node-rest-shop/package.json
@@ -10,11 +10,15 @@
   "author": "Roman Vorobey",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "morgan": "^1.9.1"
+    "mongoose": "^5.8.10",
+    "morgan": "^1.9.1",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
+    "eslint": "^6.8.0",
     "nodemon": "^2.0.2"
   }
 }
